[gd_scene load_steps=7 format=3 uid="uid://1j5apu7yfa8a"]

[ext_resource type="Script" path="res://scenes/combat/combat_attack_list/combat_attack_item.gd" id="1_7fe0x"]
[ext_resource type="LabelSettings" uid="uid://c57b47nt34mop" path="res://scenes/combat/combat_attack_list/combat_attack_label_settings.tres" id="1_8odu2"]
[ext_resource type="Texture2D" uid="uid://ciwukxf0bgfmf" path="res://icons/damage.svg" id="2_w0ays"]
[ext_resource type="Texture2D" uid="uid://b6bu6tgj8a145" path="res://icons/armor.svg" id="3_l6rn5"]
[ext_resource type="Texture2D" uid="uid://b18325qwnwga1" path="res://icons/mana.svg" id="4_an4lp"]
[ext_resource type="Texture2D" uid="uid://cs06vekk64wj8" path="res://icons/time.svg" id="5_3c433"]

[node name="CombatAttackItem" type="Panel"]
anchors_preset = -1
anchor_right = 0.521
anchor_bottom = 0.154
offset_right = -200.192
offset_bottom = 0.207993
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7fe0x")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_right = 120.0
offset_bottom = 25.0
scale = Vector2(0.997358, 1)
text = "Attack Name"

[node name="Info" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -150.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hits" type="Label" parent="Info"]
layout_mode = 2
text = "3x"
label_settings = ExtResource("1_8odu2")

[node name="Damage" type="Label" parent="Info"]
layout_mode = 2
text = "5"
label_settings = ExtResource("1_8odu2")

[node name="DamageIcon" type="TextureRect" parent="Info"]
layout_mode = 2
texture = ExtResource("2_w0ays")
expand_mode = 2

[node name="VS" type="Label" parent="Info"]
layout_mode = 2
text = "VS"
label_settings = ExtResource("1_8odu2")

[node name="TypeIcon" type="TextureRect" parent="Info"]
layout_mode = 2
texture = ExtResource("3_l6rn5")
expand_mode = 2

[node name="Cost" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = 25.0
offset_right = -8.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Mana" type="Label" parent="Cost"]
layout_mode = 2
text = "3"
label_settings = ExtResource("1_8odu2")

[node name="ManaIcon" type="TextureRect" parent="Cost"]
layout_mode = 2
texture = ExtResource("4_an4lp")
expand_mode = 2

[node name="Time" type="Label" parent="Cost"]
layout_mode = 2
text = "4"
label_settings = ExtResource("1_8odu2")

[node name="TimeIcon" type="TextureRect" parent="Cost"]
layout_mode = 2
texture = ExtResource("5_3c433")
expand_mode = 2
